--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,14 @@
-name: Java CI with Maven
+name: CI Maven (build-test-quality-publish)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout repository
@@ -24,5 +21,25 @@ jobs:
           java-version: "17"
           cache: maven
 
+      # 1) Compilación + 2) Tests (si existen)
       - name: Build and test with Maven
-        run: mvn -B clean test package
+        run: mvn -B clean verify
+
+      # 3) Análisis estático de calidad (SonarCloud)
+      # Necesitas crear el secret SONAR_TOKEN en GitHub:
+      # Settings -> Secrets and variables -> Actions -> New repository secret
+      - name: SonarCloud scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn -B sonar:sonar \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.organization=TU_ORG_SONARCLOUD \
+            -Dsonar.projectKey=TU_PROJECT_KEY
+
+      # 4) Publicación del artefacto (.jar)
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jar-compilado
+          path: target/*.jar
