--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,12 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <configLocation>google_checks.xml</configLocation>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
-                </configuration>
+               <configuration>
+                      <configLocation>google_checks.xml</configLocation>
+                      <consoleOutput>true</consoleOutput>
+                      <failOnViolation>true</failOnViolation>
+               </configuration>
+
             </plugin>
 
         </plugins>
