--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,13 +2,16 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout repository
@@ -21,11 +24,5 @@ jobs:
           java-version: "17"
           cache: maven
 
-      - name: Build + tests + package
-        run: mvn -B clean verify
-
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: jar-compilado
-          path: target/*.jar
+      - name: Build and test with Maven
+        run: mvn -B clean test package
