--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,35 @@
         <exec.mainClass>com.ucam.calidad.GestorTareasCi</exec.mainClass>
     </properties>
 
+    <!-- Configuración del proceso de build -->
+    <build>
+        <plugins>
+
+            <!-- Plugin de análisis estático de calidad del código -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.3.1</version>
+
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>checkstyle-verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
+
 </project>
