--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,26 @@
         <exec.mainClass>com.ucam.calidad.GestorTareasCi</exec.mainClass>
     </properties>
 
+    <!-- DEPENDENCIAS (JUnit 4 para tests) -->
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <!-- Configuración del proceso de build -->
     <build>
         <plugins>
+
+            <!-- Plugin para ejecutar tests (Maven detecta JUnit 4 automáticamente) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
 
             <!-- Plugin de análisis estático de calidad del código -->
             <plugin>
@@ -49,3 +66,4 @@
     </build>
 
 </project>
+
